Fix minor grammar issues. Assignment typing done. Submitted

--- a/A1-solution.tex
+++ b/A1-solution.tex
@@ -231,7 +231,7 @@ b = q = 1.660
 
 Thus, the final interval found using fibonacci search is $[1.5, 1.66]$ which is withing the tolerance required. 
 
-Thus $x^* = 1.58 \pm 0.08$.
+Thus $x^* lies in 1.58 \pm 0.08$.
 
 \section*{Question 2}
 
@@ -320,7 +320,7 @@ b = 3
 0.6180^4 = 0.1459 &<& 0.2
 \end{eqnarray}
 
-Thus, $ n = 4 $ which means we need to do 5 f calculations.
+Thus, $ n = 4 $ which means we need to do 5 f-calculations.
 
 \begin{equation}
 p = b - \gamma(b - a) = 3 - 0.6180(3) = 1.146
@@ -363,7 +363,7 @@ f(p) = -49.0182
 f(q) = -49.5141
 \end{equation}
 
-Since, $f(p) > f(q)$, we make $a = p = 1.146$, $p = q = 1.4163$ and $b = 1.854$ remains the same. Doing the last f calculation. 
+Since, $f(p) > f(q)$, we make $a = p = 1.146$, $p = q = 1.4163$ and $b = 1.854$ remains the same. Doing the last f-calculation. 
 
 \begin{equation}
 q = 1.146 + 0.6180*(0.708) = 1.5834
@@ -375,7 +375,7 @@ f(p) = -49.5141
 f(q) = -48.7760
 \end{equation}
 
-Finally, since $f(q) > f(p)$ then the final $a = 1.146$ and the final $b = q = 1.5834$. Thus, the interval for minimisation is $[1.146, 1.583]$.  Which means $x^* = 1.3645 \pm 0.2185$.
+Finally, since $f(q) > f(p)$ then the final $a = 1.146$ and the final $b = q = 1.5834$. Thus, the interval for minimisation is $[1.146, 1.583]$.  Which means $x^* is in1.3645 \pm 0.2185$.
 
 \section*{Question 3}
 
@@ -548,13 +548,13 @@ root = 0.387627049693125
 
 
 \begin{equation}
-val = -3.47558047975038e-06
+val = g(root) = -3.47558047975038e-06
 \end{equation}
 
 \begin{equation}
 iterations = 25
 \end{equation}
 
-The value observed above is within the tolerance. 
+The value observed above is well within the required tolerance. 
 
 \end{document}
